Commting Changes For Unit test bug which were found by us.

--- a/CMS_APP/Views/Home/HomePage.cshtml
+++ b/CMS_APP/Views/Home/HomePage.cshtml
@@ -102,7 +102,7 @@
 
     <!--  sale analytics end -->
     <!--  project and team member start -->
-    <div class="col-xl-12 col-md-12">
+   @* <div class="col-xl-12 col-md-12">
         <div class="card table-card">
             <div class="card-header">
                 <h5>Candidates</h5>
@@ -368,4 +368,4 @@
             </div>
         </div>
     </div>
-</div>
+</div>*@
