--- a/CMS_APP/Views/Designation/Designationlist.cshtml
+++ b/CMS_APP/Views/Designation/Designationlist.cshtml
@@ -73,7 +73,7 @@
 									<label class="right-align" data-error="wrong" data-success="right" for="orangeForm-name">
 										<span class="modal-text w-100  font-weight-bold " style="vertical-align: middle; font-size: 1.2em; color: grey;">Designation</span>
 									</label>
-									<input asp-for="Designation" type="text" id="Designation" class="form-control validate" >
+									<input asp-for="Designation" type="text" id="Designation" class="form-control validate" oninput="this.value = this.value.replace(/[^a-zA-Z\s]/g, '');">
 									<span asp-validation-for="Designation" class="text-danger" id="DesignationError"></span>
 								</div>
 								@*<input type="hidden" id="create_User" value="@create_User" class="form-control validate">*@
@@ -141,7 +141,7 @@
 										</button>
 										<div class="dropdown-menu">
 
-											<button type="button" class="dropdown-item" data-toggle="modal" data-target="#UpdateModalCenter_@data.DesignationID" >Edit</button>
+											<button type="button" class="dropdown-item" data-toggle="modal" data-target="#UpdateModalCenter_@data.DesignationID" onclick="updateClearModal(@data.DesignationID)">Edit</button>
 											<button type="button" class="dropdown-item" data-toggle="modal" data-target="#myModal_@data.DesignationID">Delete</button>
 										</div>
 									</div>
@@ -154,7 +154,7 @@
 														<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
 													</div>
 													<div class="modal-body">
-														<input type="hidden" id="deleteDesignationID_@data.DesignationID" value="@data.DesignationID" class="form-control">
+														<input type="hidden" id="deleteDesignationID_@data.DesignationID" value="@data.DesignationID" class="form-control" >
 														<p>Do you really want to delete these record?This process cannot be undone.</p>
 													</div>
 													<div class="modal-footer justify-content-center">
@@ -177,17 +177,20 @@
 														</button>
 													</div>
 													<div class="modal-body ">
-														<input type="hidden" id="updatedesignationid_@data.DesignationID" value="@data.DesignationID" class="form-control validate" readonly>
-
-														<label class="text-right" data-error="wrong" data-success="left" for="orangeForm-name">
-															<span class="modal-text w-100  font-weight-bold " style="vertical-align: middle; font-size: 1.2em; color: grey;">	Designation </span>
-														</label>
-														<input type="text" id="updatedesignation_@data.DesignationID" value="@data.Designation" class="form-control validate" >
-														<span asp-validation-for="Designation" class="text-danger" id="DesignationError_@data.DesignationID"></span>
+														<input type="hidden" id="previousDesignation_@data.DesignationID" value="@data.Designation" />
+														<input type="hidden" id="updatedesignationid_@data.DesignationID" value="@data.DesignationID" class="form-control validate">
+														<div class="modal-body">
+															<label class="text-right" data-error="wrong" data-success="left" for="orangeForm-name">
+																<span class="modal-text w-100  font-weight-bold " style="vertical-align: middle; font-size: 1.2em; color: grey;">Designation </span>
+															</label>
+															<input type="text" id="updatedesignation_@data.DesignationID" value="@data.Designation" class="form-control validate" oninput="this.value = this.value.replace(/[^a-zA-Z\s]/g, '');">
+															<span asp-validation-for="Designation" class="text-danger" id="DesignationError_@data.DesignationID"></span>
+														</div>
 
 														@*<input type="hidden" id="update_change_user_@data.DesignationID" value="@create_User" class="form-control validate">*@
 														<input type="hidden" id="update_change_Date_@data.DesignationID" value="@data.change_Date" class="form-control validate">
 													</div>
+													
 													<div class="modal-footer d-flex justify-content-center">
 														<button class="btn btn-deep-blue" id="edit-btn" onclick="updatefunction(@data.DesignationID)"> Edit </button>
 													</div>
@@ -214,18 +217,26 @@
 		   $('#Designation').val('');
 		   $('#DesignationError').text('');  
 	   }
+		function updateClearModal(id) {
+			//For update to get the previous values
+			$("#updatedesignation_" + id).val($("#previousDesignation_" + id).val());
+
+			// Clear the error messages
+			$('#DesignationError_' + id).text('');
+
+		}
 		$(function() {
 			// Add click event handler to the Save button
 			$('#save-btn').click(function () {
 				// Get the values of the input fields
 			var Designation = $('#Designation').val();
 			//var createdBy = $('#create_User').val();
-			if (Designation === '') {
+			if (Designation.trim() === '') {
 				$('#DesignationError').text('Designation is required.');
 				return;
 			}
-			if (!/^[a-zA-Z]+(\s[a-zA-Z]+)?$/.test(Designation.trim())) {
-				$('#DesignationError').text('Designation is incorrect.Please enter a valid designation.');
+			if ((!/^[a-zA-Z]+(\s[a-zA-Z]+)?$/.test(Designation.trim())) || (Designation.length < 2)) {
+				$('#DesignationError').text('A valid designation requires a minimum of 2 characters.');
 				return;
 			}// Make the AJAX call
 				$.ajax({
@@ -250,7 +261,7 @@
 						console.error(errorThrown);
 					}
 				});
-			});
+			}); 
 			$('#Designation').on('input', function () {
 				// Clear the error message when the field is not empty
 				if ($(this).val() !== '') {
@@ -263,7 +274,7 @@
 			var designation = $('#updatedesignation_' + id).val();
 			//var updatedby = $('#update_change_user_' + id).val();
 			var updatedtime = $('#update_change_Date_' + id).val();
-			if (designation === '') {
+		if (designation.trim() === '') {
 				// Show error message and return without making the AJAX call
 			$('#DesignationError_' + id).text('Designation is required.');
 				setTimeout(function () {
@@ -271,13 +282,13 @@
 				}, 3000);
 				return ;
 			}
-		    if (!/^[a-zA-Z]+(\s[a-zA-Z]+)?$/.test(designation.trim())) {
+		if ((!/^[a-zA-Z]+(\s[a-zA-Z]+)?$/.test(designation.trim())) || (designation.length < 2)) {
 				// Show error message and return without making the AJAX call
-			    $('#DesignationError_' + id).text('Designation is incorrect.Please enter a valid designation.');
-				setTimeout(function () {
-					$('#DesignationError_' + id).text('');
-				}, 3000);
-				return;
+				$('#DesignationError_' + id).text('A valid designation requires a minimum of 2 characters.');
+					setTimeout(function () {
+						$('#DesignationError_' + id).text('');
+					}, 3000);
+					return;
 			}
 			$.ajax({
 				url: '/Designation/UpdateDesignationlist',
@@ -324,7 +335,6 @@
 				designationid: designationid
 				},
 				success: function (response) {
-					
 					console.log(response);
 				$('#myModal_'+id).modal('hide');
 				alert(response.message);
