--- a/CMS_APP/Views/Reason/Reasonlist.cshtml
+++ b/CMS_APP/Views/Reason/Reasonlist.cshtml
@@ -86,7 +86,7 @@
 
 										<span class="modal-text w-100  font-weight-bold " style="vertical-align: middle; font-size: 1.2em; color: grey;">Reason</span>
 									</label>
-									<input asp-for="Reason" type="text" id="Reason" class="form-control validate">
+									<input asp-for="Reason" type="text" id="Reason" class="form-control validate" oninput="this.value = this.value.replace(/[^a-zA-Z\s]/g, '');">
 
 									<span asp-validation-for="Reason" class="text-danger" id="ReasonError"></span>
 								</div>
@@ -153,8 +153,8 @@
 											</svg>
 										</button>
 										<div class="dropdown-menu">
-										
-											<button type="button" class="dropdown-item" data-toggle="modal" data-target="#UpdateModalCenter_@data.ReasonID">Edit</button>
+											
+											<button type="button" class="dropdown-item" data-toggle="modal" data-target="#UpdateModalCenter_@data.ReasonID" onclick="updateClearModal(@data.ReasonID)">Edit</button>
 											<button type="button" class="dropdown-item" data-toggle="modal" data-target="#myModal_@data.ReasonID">Delete</button>
 										</div>
 									</div>
@@ -192,19 +192,20 @@
 															<span aria-hidden="true">&times;</span>
 														</button>
 													</div>
-
-													<div class="modal-body " >
+													<div class="modal-body ">
+														<input type="hidden" id="previousReason_@data.ReasonID" value="@data.Reason" />
 														<input type="hidden" id="updatereasonid_@data.ReasonID" value="@data.ReasonID" class="form-control validate" readonly>
-														
-															<label class="text-right"  data-error="wrong" data-success="left" for="orangeForm-name">
+														<div class="modal-body">
+															<label class="text-right" data-error="wrong" data-success="left" for="orangeForm-name">
 																<span class="modal-text w-100  font-weight-bold " style="vertical-align: middle; font-size: 1.2em; color: grey;">	Reason </span>
 															</label>
-														<input asp-for="Reason" type="text" id="updatereason_@data.ReasonID" value="@data.Reason" class="form-control validate">
-														<span asp-validation-for="Reason" class="text-danger" id="ReasonError_@data.ReasonID"></span>
+															<input asp-for="Reason" type="text" id="updatereason_@data.ReasonID" value="@data.Reason" class="form-control validate" oninput="this.value = this.value.replace(/[^a-zA-Z\s]/g, '');">
+															<span asp-validation-for="Reason" class="text-danger" id="ReasonError_@data.ReasonID"></span>
+														</div>
 														
-														@*<input type="hidden" id="update_change_user_@data.ReasonID" value="@create_User" class="form-control validate">*@
 														<input type="hidden" id="update_change_Date_@data.ReasonID" value="@data.change_Date" class="form-control validate">
 													</div>
+													
 													<div class="modal-footer d-flex justify-content-center">
 														<button class="btn btn-deep-blue" id="edit-btn" onclick="updatefunction(@data.ReasonID)"> Edit </button>
 													</div>
@@ -247,6 +248,15 @@
 
 	}
 
+	function updateClearModal(id) {
+		//For update to get the previous values
+		$("#updatereason_" + id).val($("#previousReason_" + id).val());
+		
+		// Clear the error messages
+		$('#ReasonError_' + id).text('');
+
+	}
+
 	$(function () {
 		// Add click event handler to the Save button
 		$('#save-btn').click(function () {
@@ -254,13 +264,13 @@
 			var Reason = $('#Reason').val();
 
 			//var createdBy = $('#create_User').val();
-			if (Reason === '') {
+			if (Reason.trim() === '') {
 				$('#ReasonError').text('Reason is required.');
 				return;
 			}
 
-			if (!/^[a-zA-Z]+(\s[a-zA-Z]+)?$/.test(Reason.trim())) {
-				$('#ReasonError').text('Reason is incorrect.Please enter a valid reason.');
+			if( (!/^[a-zA-Z]+(\s[a-zA-Z]+)?$/.test(Reason.trim()))||(Reason.length < 2)) {
+			$('#ReasonError').text('A valid reason requires a minimum of 2 characters.');
 				return;
 			}
 			// Make the AJAX call
@@ -303,7 +313,7 @@
 		//var updatedby = $('#update_change_user_' + id).val();
 		var updatedtime = $('#update_change_Date_' + id).val();
 
-		if (reason === '') {
+		if (reason.trim() === '') {
 			// Show error message and return without making the AJAX call
 			$('#ReasonError_'+ id).text('Reason is required.');
 			setTimeout(function () {
@@ -311,9 +321,9 @@
 			}, 3000);
 			return;
 		}
-		if (!/^[a-zA-Z]+([ ][a-zA-Z]+)*$/.test(reason.trim())) {
+		if ((!/^[a-zA-Z]+([ ][a-zA-Z]+)*$/.test(reason.trim())) || (reason.length < 2)) {
 			// Show error message and return without making the AJAX call
-			$('#ReasonError_' + id).text('Reason is incorrect.Please enter a valid reason.');
+			$('#ReasonError_' + id).text('A valid reason requires a minimum of 2 characters.');
 			setTimeout(function () {
 				$('#ReasonError_' + id).text('');
 			}, 3000);
