--- a/CMS_APP/Views/Round/Roundlist.cshtml
+++ b/CMS_APP/Views/Round/Roundlist.cshtml
@@ -90,7 +90,7 @@
 
 										<span class="modal-text w-100  font-weight-bold " style="vertical-align: middle; font-size: 1.2em; color: grey;">Round Name</span>
 									</label>
-									<input asp-for="Round_Name" type="text" id="Round_Name" class="form-control validate">
+									<input asp-for="Round_Name" type="text" id="Round_Name" class="form-control validate" placeholder="Ex:Round A,RoundA" oninput="this.value = this.value.replace(/[^a-zA-Z\s]/g, '');">
 									<span asp-validation-for="Round_Name" class="text-danger" id="RoundError"></span>
 
 									@*<input type="hidden" id="create_User" value="@create_User" class="form-control validate">*@
@@ -158,7 +158,7 @@
 										<div class="dropdown-menu">
 											@*<button type="button" class="dropdown-item" data-toggle="modal" data-target="#UpdateModalCenter_@data.DesignationID">Edit</button>
 										*@
-											<button type="button" class="dropdown-item" data-toggle="modal" data-target="#UpdateModalCenter_@data.RoundID">Edit</button>
+											<button type="button" class="dropdown-item" data-toggle="modal" data-target="#UpdateModalCenter_@data.RoundID" onclick="updateClearModal(@data.RoundID)">Edit</button>
 											<button type="button" class="dropdown-item" data-toggle="modal" data-target="#myModal_@data.RoundID">Delete</button>
 										</div>
 									</div>
@@ -196,19 +196,30 @@
 															<span aria-hidden="true">&times;</span>
 														</button>
 													</div>
-
-													<div class="modal-body mx-3">
+													<div class="modal-body ">
+														<input type="hidden" id="previousRound_@data.RoundID" value="@data.Round_Name" />
+														<input type="hidden" id="updateRoundID_@data.RoundID" value="@data.RoundID" class="form-control validate" readonly>
+														<div class="modal-body">
+															<label class="text-right" data-error="wrong" data-success="right" for="orangeForm-name">
+																<span class="modal-text w-100  font-weight-bold " style="vertical-align: middle; font-size: 1.2em; color: grey;">Round</span>
+															</label>
+															<input type="text" id="updateround_@data.RoundID" value="@data.Round_Name" class="form-control validate" placeholder="Ex:Round A,RoundA"  oninput="this.value = this.value.replace(/[^a-zA-Z\s]/g, '');">
+															<span asp-validation-for="Reason" class="text-danger" id="RoundError_@data.RoundID"></span>
+														</div>
+														<input type="hidden" id="update_change_Date_@data.RoundID" value="@data.change_Date" class="form-control validate">
+													</div>
+													@*<div class="modal-body mx-3">
 														<input type="hidden" id="updateRoundID_@data.RoundID" value="@data.RoundID" class="form-control validate" readonly>
 														<label class="text-right" data-error="wrong" data-success="left" for="orangeForm-name">
 															<span class="modal-text w-100  font-weight-bold " style="vertical-align: middle; font-size: 1.2em; color: grey;">Round</span>
 														</label>
 
-														<input type="text" id="updateround_@data.RoundID" value="@data.Round_Name" class="form-control validate">
+														<input type="text" id="updateround_@data.RoundID" value="@data.Round_Name" class="form-control validate" oninput="this.value = this.value.replace(/[^a-zA-Z\s]/g, '');">
 														<span asp-validation-for="Reason" class="text-danger" id="RoundError_@data.RoundID"></span>
 
 														@*<input type="hidden" id="update_change_user_@data.RoundID" value="@create_User" class="form-control validate">*@
-														<input type="hidden" id="update_change_Date_@data.RoundID" value="@data.change_Date" class="form-control validate">
-													</div>
+														@*<input type="hidden" id="update_change_Date_@data.RoundID" value="@data.change_Date" class="form-control validate">
+													</div>*@
 													<div class="modal-footer d-flex justify-content-center">
 														<button class="btn btn-deep-blue" id="edit-btn" onclick="updatefunction(@data.RoundID)"> Edit </button>
 													</div>
@@ -244,6 +255,15 @@
 
 	}
 
+	function updateClearModal(id) {
+		//For update to get the previous values
+		$("#updateround_" + id).val($("#previousRound_" + id).val());
+
+		// Clear the error messages
+		$('#RoundError_' + id).text('');
+
+	}
+
 
 	$(function () {
 		// Add click event handler to the Save button
@@ -252,13 +272,13 @@
 			var Round_Name = $('#Round_Name').val();
 			//var createdBy = $('#create_User').val();
 
-			if (Round_Name === '') {
+			if (Round_Name.trim() === '') {
 				$('#RoundError').text('Round is required.');
 				return;
 			}
 
-			if (!/^[a-zA-Z0-9]+(\s[a-zA-Z0-9]+)?$/.test(Round_Name.trim())) {
-				$('#RoundError').text('Round is incorrect.Please enter a valid round.');
+			if ((!/^[a-zA-Z]+(\s[a-zA-Z]+)?$/.test(Round_Name.trim()))  || (Round_Name.length < 2)) {
+				$('#RoundError').text('A valid round name requires a minimum of 2 characters.');
 				return;
 			}
 
@@ -302,7 +322,7 @@
 		//var updatedby = $('#update_change_user_' + id).val();
 		var updatedtime = $('#update_change_Date_' + id).val();
 
-		if (Round_Name === '') {
+		if (Round_Name.trim() === '') {
 			// Show error message and return without making the AJAX call
 			$('#RoundError_' + id).text('Round is required.');
 			setTimeout(function () {
@@ -310,9 +330,9 @@
 			}, 3000);
 			return;
 		}
-		if (!/^[a-zA-Z0-9]+(\s[a-zA-Z0-9]+)?$/.test(Round_Name.trim())) {
+		if ((!/^[a-zA-Z]+(\s[a-zA-Z]+)?$/.test(Round_Name.trim()))  || (Round_Name.length < 2)) {
 			// Show error message and return without making the AJAX call
-			$('#RoundError_' + id).text('Round is incorrect.Please enter a valid round.');
+			$('#RoundError_' + id).text('A valid round name requires a minimum of 2 characters.');
 			setTimeout(function () {
 				$('#RoundError_' + id).text('');
 			}, 3000);
@@ -354,7 +374,7 @@
 				//	}, 3000);
 				//	return;
 				//}
-				console.error(errorthrown);
+				console.error(response);
 			}
 		});
 
