--- a/CMS_APP/Views/Login/Login.cshtml
+++ b/CMS_APP/Views/Login/Login.cshtml
@@ -58,8 +58,8 @@
                 </div>
                 @Html.ValidationMessageFor(x=>x.Password)
             </div>
-
-            <a tabindex="3" href="@ControllerName.Home/@ActionName.ForgotPasswordSubmit" class="font-weight-bold text-danger">Forgot Password ?</a>
+          
+            <a tabindex = "3" href ="@Url.Action("ForgotPassword","login")" class="font-weight-bold text-danger">Forgot Password ?</a>
 
             <a tabindex="3" href="@Url.Action("CandidateRegistration","Candidate")" class="font-weight-bold text-danger">Apply For Job</a>
           
