--- a/CMS_APP/Views/Candidate/CandidateRegistration.cshtml
+++ b/CMS_APP/Views/Candidate/CandidateRegistration.cshtml
@@ -443,7 +443,7 @@
 										<li class="form-line row">
 											<div class="col-md-6">
 												<div class="form-group">
-													<label for="10th_pr">Position Applying For</label>
+													<label for="10th_pr">Position Applying For <span style="color:red">*</span> </label>
 													<select class="form-control" required id="technology">
 														<option value="" disabled selected>Please Select</option>
 														@foreach (var technology in ViewBag.TechnologyList)
