--- a/CMS_APP/Views/Shared/_Layout.cshtml
+++ b/CMS_APP/Views/Shared/_Layout.cshtml
@@ -484,7 +484,7 @@
                                     <div class="col-md-4">
                                         <ul class="breadcrumb-title" style="float: left !important ">
                                             <li class="breadcrumb-item">
-                                                <a href="index.html"> <i class="fa fa-home"></i> </a>
+                                                <a href="@Url.Action("HomePage","Home")"> <i class="fa fa-home"></i> </a>
                                             </li>
                                             <li class="breadcrumb-item">
                                                 <a href="#!">Dashboard</a>
