--- a/CMS_APP/Views/Interviewer/InterviewerList.cshtml
+++ b/CMS_APP/Views/Interviewer/InterviewerList.cshtml
@@ -1,6 +1,7 @@
 ﻿@using Newtonsoft.Json;
 @using Microsoft.AspNetCore.Http
-@model List<CMS.Models.InterviewerModel>
+@*@model List<CMS.Models.InterviewerModel>*@
+	@model CMS.Models.InterviewerViewModel
 @inject IHttpContextAccessor HttpContextAccessor
 @{
 	ViewBag.Title = "Interviewer List";
@@ -80,7 +81,7 @@
 								<div class="modal-body mx-3">
 									<label class="right-align" data-error="wrong" data-success="right" for="orangeForm-name">
 
-										<span class="modal-text w-100  font-weight-bold " style="vertical-align: middle; font-size: 1.2em; color: grey;">First Name</span>
+										<span class="modal-text w-100  font-weight-bold " style="vertical-align: middle; font-size: 1.2em; color: grey;">First Name <span style="color: red; display: inline;">*</span></span>
 									</label>
 									<input asp-for="firstName" type="text" id="firstName" class="form-control validate" placeholder="Enter your first name">
 
@@ -91,7 +92,7 @@
 								<div class="modal-body mx-3">
 									<label class="right-align" data-error="wrong" data-success="right" for="orangeForm-name">
 
-										<span class="modal-text w-100  font-weight-bold " style="vertical-align: middle; font-size: 1.2em; color: grey;">Last Name</span>
+										<span class="modal-text w-100  font-weight-bold " style="vertical-align: middle; font-size: 1.2em; color: grey;">Last Name <span style="color: red; display: inline;">*</span></span>
 									</label>
 									<input asp-for="lastName" type="text" id="lastName" class="form-control validate" placeholder="Enter your last name">
 
@@ -102,7 +103,7 @@
 								<div class="modal-body mx-3">
 									<label class="right-align" data-error="wrong" data-success="right" for="orangeForm-name">
 
-										<span class="modal-text w-100  font-weight-bold " style="vertical-align: middle; font-size: 1.2em; color: grey;">Email</span>
+										<span class="modal-text w-100  font-weight-bold " style="vertical-align: middle; font-size: 1.2em; color: grey;">Email <span style="color: red; display: inline;">*</span></span>
 									</label>
 									<input asp-for="email" type="text" id="email" class="form-control validate" placeholder="Enter your email address">
 
@@ -112,7 +113,7 @@
 
 								<div class="modal-body mx-3">
 									<label class="right-align" data-error="wrong" data-success="right" for="orangeForm-password">
-									<span class="modal-text w-100  font-weight-bold" style="vertical-align: middle; font-size: 1.2em; color: grey;">Password</span>
+									<span class="modal-text w-100  font-weight-bold" style="vertical-align: middle; font-size: 1.2em; color: grey;">Password <span style="color: red; display: inline;">*</span></span>
 									</label>
 									<div class="input-group">
 									<input asp-for="password" type="password" id="password" class="form-control validate" placeholder="Enter your password">
@@ -127,7 +128,7 @@
 
 								<div class="modal-body mx-3">
 									<label class="right-align" data-error="wrong" data-success="right" for="orangeForm-name">
-										<span class="modal-text w-100 font-weight-bold" style="vertical-align: middle; font-size: 1.2em; color: grey;">Designation</span>
+										<span class="modal-text w-100 font-weight-bold" style="vertical-align: middle; font-size: 1.2em; color: grey;">Designation <span style="color: red; display: inline;">*</span></span>
 									</label>
 									<select class="form-control validate designation-dropdown" required id="designation">
 										<option value="" disabled selected>Select designation</option>
@@ -143,7 +144,7 @@
 
 								<div class="modal-body mx-3">
 									<label class="right-align" data-error="wrong" data-success="right" for="orangeForm-name">
-										<span class="modal-text w-100 font-weight-bold" style="vertical-align: middle; font-size: 1.2em; color: grey;">Technology</span>
+										<span class="modal-text w-100 font-weight-bold" style="vertical-align: middle; font-size: 1.2em; color: grey;">Technology <span style="color: red; display: inline;">*</span></span>
 									</label>
 									<select class="form-control validate technology-dropdown" required id="technology">
 										<option value="" disabled selected>Select technology</option>
@@ -158,7 +159,7 @@
 								<div class="modal-body mx-3">
 									<label class="right-align" data-error="wrong" data-success="right" for="orangeForm-name">
 
-										<span class="modal-text w-100  font-weight-bold " style="vertical-align: middle; font-size: 1.2em; color: grey;">Year of Experience</span>
+										<span class="modal-text w-100  font-weight-bold " style="vertical-align: middle; font-size: 1.2em; color: grey;">Year of Experience <span style="color: red; display: inline;">*</span></span>
 									</label>
 									<input asp-for="experience" type="text" id="experience" class="form-control validate" placeholder="Enter years of experience">
 
@@ -168,7 +169,7 @@
 
 								<div class="modal-body mx-3">
 									<label class="right-align" data-error="wrong" data-success="right" for="orangeForm-name">
-										<span class="modal-text w-100 font-weight-bold" style="vertical-align: middle; font-size: 1.2em; color: grey;">Total Interviews Conducted</span>
+										<span class="modal-text w-100 font-weight-bold" style="vertical-align: middle; font-size: 1.2em; color: grey;">Total Interviews Conducted <span style="color: red; display: inline;">*</span></span>
 									</label>
 									<input asp-for="InterviewsConducted" type="number" id="InterviewsConducted" class="form-control validate" placeholder="Enter total interviews conducted">
 
@@ -201,7 +202,7 @@
 						</tr>
 					</thead>
 					<tbody>
-						@foreach (var data in Model)
+						@foreach (var data in Model.Interviewers)
 						{
 							<tr>
 								<td class="text-center">@data.FirstName</td>
@@ -281,7 +282,7 @@
 														<div class="modal-body">
 															<label class="right-align" data-error="wrong" data-success="right" for="orangeForm-name">
 
-																<span class="modal-text w-100  font-weight-bold " style="vertical-align: middle; font-size: 1.2em; color: grey;">First Name</span>
+																<span class="modal-text w-100  font-weight-bold " style="vertical-align: middle; font-size: 1.2em; color: grey;">First Name <span style="color: red; display: inline;">*</span></span>
 															</label>
 															<input asp-for="firstName" type="text" id="firstName_@data.InterviewerId" value="@data.FirstName" class="form-control validate" placeholder="Enter your first name">
 
@@ -292,7 +293,7 @@
 														<div class="modal-body">
 															<label class="right-align" data-error="wrong" data-success="right" for="orangeForm-name">
 
-																<span class="modal-text w-100  font-weight-bold " style="vertical-align: middle; font-size: 1.2em; color: grey;">Last Name</span>
+																<span class="modal-text w-100  font-weight-bold " style="vertical-align: middle; font-size: 1.2em; color: grey;">Last Name<span style="color: red; display: inline;">*</span></span>
 															</label>
 															<input asp-for="lastName" type="text" id="lastName_@data.InterviewerId" value="@data.LastName" class="form-control validate" placeholder="Enter your last name">
 
@@ -303,7 +304,7 @@
 														<div class="modal-body">
 															<label class="right-align" data-error="wrong" data-success="right" for="orangeForm-name">
 
-																<span class="modal-text w-100  font-weight-bold " style="vertical-align: middle; font-size: 1.2em; color: grey;">Email</span>
+																<span class="modal-text w-100  font-weight-bold " style="vertical-align: middle; font-size: 1.2em; color: grey;">Email <span style="color: red; display: inline;">*</span></span>
 															</label>
 															<input asp-for="email" type="text" id="email_@data.InterviewerId" value="@data.Email" class="form-control validate" placeholder="Enter your email address">
 
@@ -328,7 +329,7 @@
 
 														<div class="modal-body">
 															<label class="right-align" data-error="wrong" data-success="right" for="orangeForm-name">
-																<span class="modal-text w-100 font-weight-bold" style="vertical-align: middle; font-size: 1.2em; color: grey;">Designation</span>
+																<span class="modal-text w-100 font-weight-bold" style="vertical-align: middle; font-size: 1.2em; color: grey;">Designation <span style="color: red; display: inline;">*</span></span>
 															</label>
 															<select class="form-control validate designation-dropdown" required id="designation_@data.InterviewerId">
 																<option value="" disabled>Select designation</option>
@@ -342,7 +343,7 @@
 
 														<div class="modal-body">
 															<label class="right-align" data-error="wrong" data-success="right" for="orangeForm-name">
-																<span class="modal-text w-100 font-weight-bold" style="vertical-align: middle; font-size: 1.2em; color: grey;">Technology</span>
+																<span class="modal-text w-100 font-weight-bold" style="vertical-align: middle; font-size: 1.2em; color: grey;">Technology <span style="color: red; display: inline;">*</span></span>
 															</label>
 															<select class="form-control validate technology-dropdown" required selected="@data.TechnologyId" id="technology_@data.InterviewerId">
 																<option value="" disabled selected>Select technology</option>
@@ -357,7 +358,7 @@
 														<div class="modal-body">
 															<label class="right-align" data-error="wrong" data-success="right" for="orangeForm-name">
 
-																<span class="modal-text w-100  font-weight-bold " style="vertical-align: middle; font-size: 1.2em; color: grey;">Year of Experience</span>
+																<span class="modal-text w-100  font-weight-bold " style="vertical-align: middle; font-size: 1.2em; color: grey;">Year of Experience <span style="color: red; display: inline;">*</span></span>
 															</label>
 															<input asp-for="experience" type="number" id="experience_@data.InterviewerId" value="@data.YearOfExperience" class="form-control validate" placeholder="Enter years of experience">
 
@@ -368,7 +369,7 @@
 														<div class="modal-body">
 															<label class="right-align" data-error="wrong" data-success="right" for="orangeForm-name">
 
-																<span class="modal-text w-100  font-weight-bold " style="vertical-align: middle; font-size: 1.2em; color: grey;">Total Interviews Conducted</span>
+																<span class="modal-text w-100  font-weight-bold " style="vertical-align: middle; font-size: 1.2em; color: grey;">Total Interviews Conducted <span style="color: red; display: inline;">*</span></span>
 															</label>
 															<input asp-for="InterviewsConducted" type="number" id="InterviewsConducted_@data.InterviewerId" value="@data.TotalInterviewsConducted" class="form-control validate" placeholder="Enter total interviews conducted">
 
@@ -389,10 +390,44 @@
 						}
 					</tbody>
 				</table>
-				<div class="text-right m-r-20">
+				@*<div class="text-right m-r-20">
 					<a href="#!" class=" b-b-primary text-primary">View all Task</a>
-				</div>
+				</div>*@
 			</div>
+			<!-- Pagination controls -->
+            <div class="pagination-container">
+                @if (Model != null && Model.PaginationModel.TotalPages >= 1)
+                {
+                    <nav aria-label="Page navigation" class="text-right">
+                        <ul class="pagination justify-content-end">
+                            <li class="page-item @(Model.PaginationModel.CurrentPage == 1 ? "disabled" : "")">
+                                <a class="page-link" href="/Interviewer/InterviewerList?pageNumber=@(Model.PaginationModel.CurrentPage - 1)&pageSize=@Model.PaginationModel.PageSize" aria-label="Previous">
+                                    Previous
+                                </a>
+                            </li>
+                            <li class="page-item">
+								<a class="page-link" href="/Interviewer/InterviewerList?pageNumber=1&pageSize=@Model.PaginationModel.PageSize">First</a>
+                            </li>
+                            @for (int i = 1; i <= Model.PaginationModel.TotalPages; i++)
+                            {
+                                <li class="page-item @(i == Model.PaginationModel.CurrentPage ? "active" : "")">
+                                    <a class="page-link" href="/Interviewer/InterviewerList?pageNumber=@i&pageSize=@Model.PaginationModel.PageSize">@i</a>
+                                </li>
+                            }
+                            <li class="page-item @(Model.PaginationModel.CurrentPage == Model.PaginationModel.TotalPages ? "disabled" : "")">
+                                <a class="page-link" href="/Interviewer/InterviewerList?pageNumber=@Model.PaginationModel.TotalPages&pageSize=@Model.PaginationModel.PageSize" aria-label="Last">
+                                    Last
+                                </a>
+                            </li>
+                            <li class="page-item @(Model.PaginationModel.CurrentPage == Model.PaginationModel.TotalPages ? "disabled" : "")">
+								<a class="page-link" href="/Interviewer/InterviewerList?pageNumber=@(Model.PaginationModel.CurrentPage + 1)&pageSize=@Model.PaginationModel.PageSize" aria-label="Next">
+                                    Next
+                                </a>
+                            </li>
+                        </ul>
+                    </nav>
+                }
+            </div>
 		</div>
 	</div>
 </div>
