--- a/CMS_APP/Views/Candidate/CandidateRegistration.cshtml
+++ b/CMS_APP/Views/Candidate/CandidateRegistration.cshtml
@@ -334,36 +334,41 @@
 											<div class="col-md-6">
 												<div class="form-group">
 													<label for="first_name">First Name <span style="color:red">*</span> </label>
-													<input type="text" class="form-control" id="first_name" data-type="input-textbox" pattern="[A-Za-z]+" aria-describedby="first_nameHelp" placeholder="First Name" required="" oninput="this.value = this.value.replace(/[^A-za-z]/g, '');">
-													<small id="firstname" class="form-text text-muted">Enter alphabets only</small>
+													<input type="text" class="form-control" id="first_name" data-type="input-textbox" pattern="[A-Za-z]{2,}" title="Enter alphabets only with a minimum length of 2 characters" aria-describedby="first_nameHelp" placeholder="First Name" required minlength="2" oninput="this.value = this.value.replace(/[^A-Za-z]+/g, '');">
+													<small id="firstname" class="form-text text-muted">Enter alphabets only with a minimum 2 characters</small>
 													<span asp-validation-for="firstname" class="text-danger" id="firstnameError"></span>
 												</div>
 											</div>
 											<div class="col-md-6">
 												<div class="form-group">
 													<label for="last_name">Last Name <span style="color:red">*</span> </label>
-													<input type="text" class="form-control" id="last_name" data-type="input-textbox" pattern="[A-Za-z]+" aria-describedby="emailHelp" placeholder="Last Name" required="" oninput="this.value = this.value.replace(/[^A-za-z]/g, '');">
-													<small id="lastname" class="form-text text-muted">Enter alphabets only</small>
+													<input type="text" class="form-control" id="last_name" data-type="input-textbox" pattern="[A-Za-z]{2,}" title="Enter alphabets only with a minimum length of 2 characters" aria-describedby="emailHelp" placeholder="Last Name" required minlength="2" oninput="this.value = this.value.replace(/[^A-Za-z]+/g, '');">
+													<small id="lastname" class="form-text text-muted">Enter alphabets only with a minimum 2 characters</small>
 												</div>
 											</div>
 											<div class="col-md-12">
 												<div class="form-group">
 													<label for="exampleInputEmail1">Address <span style="color:red">*</span> </label>
-													<input type="text" class="form-control" id="Address" aria-describedby="AddresslHelp" placeholder="Address" required="">
+													<input type="text" class="form-control" id="Address" aria-describedby="AddresslHelp" placeholder="Address" required title="Enter alphabets only with a minimum length of 2 characters" minlength="2">
+													<small id="address_" class="form-text text-muted">
+														<small id="address" class="form-text text-muted">Enter alphabets only with a minimum 2 characters</small>
+													</small>
 												</div>
 											</div>
 											<div class="col-md-6">
 												<div class="form-group">
 													<label for="city">City <span style="color:red">*</span> </label>
-													<input type="text" class="form-control" id="city" data-type="input-textbox" pattern="[A-Za-z]+" aria-describedby="cityHelp" placeholder="City" required="" oninput="this.value = this.value.replace(/[^A-za-z]/g, '');">
-													<small id="city_" class="form-text text-muted">Enter alphabets only</small>
+													<input type="text" class="form-control" id="city" data-type="input-textbox" pattern="[A-Za-z]{2,}" title="Enter alphabets only with a minimum length of 2 characters" aria-describedby="cityHelp" placeholder="City" required="" minlength="2" oninput="this.value = this.value.replace(/[^A-za-z]/g, '');">
+													<small id="city_" class="form-text text-muted">
+														<small id="lastname" class="form-text text-muted">Enter alphabets only with a minimum 2 characters</small>
+													</small>
 												</div>
 											</div>
 											<div class="col-md-6">
 												<div class="form-group">
 													<label for="last_name">State <span style="color:red">*</span> </label>
-													<input type="text" class="form-control" id="State" data-type="input-textbox" pattern="[A-Za-z]+" aria-describedby="stateHelp" placeholder="State" required="" oninput="this.value = this.value.replace(/[^A-za-z]/g, '');">
-													<small id="State_" class="form-text text-muted">Enter alphabets only</small>
+													<input type="text" class="form-control" id="State" data-type="input-textbox" pattern="[A-Za-z]{2,}" title="Enter alphabets only with a minimum length of 2 characters" aria-describedby="stateHelp" placeholder="State" required="" minlength="2" oninput="this.value = this.value.replace(/[^A-za-z]/g, '');">
+													<small id="State_" class="form-text text-muted">Enter alphabets only with a minimum 2 characters</small>
 												</div>
 											</div>
 											<div class="col-md-6">
@@ -375,8 +380,8 @@
 											</div>
 											<div class="col-md-6">
 												<div class="form-group">
-													<label for="email">E-Mail<span style="color:red">*</span> </label>
-													<input type="email" class="form-control" name="email" id="email" pattern="[a-z0-9._%+-]+@@[a-z0-9.-]+\.[a-z]{2,4}$" data-type="input-textbox" aria-describedby="emailHelp" placeholder="ex: myname@example.com" required>
+													<label for="email">E-Mail<span style="color:red">*</span> </label>							  
+													<input type="email" class="form-control" name="email" id="email" pattern="[a-zA-Z0-9._%+-]+@@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,4}$" data-type="input-textbox" aria-describedby="emailHelp" placeholder="ex: myname@example.com" required>
 													<span asp-validation-for="Designation" class="text-danger" id="EmailError"></span>
 													<small id="emailid" class="form-text text-muted">ex: myname@example.com</small>
 												</div>
@@ -407,7 +412,7 @@
 											<div class="col-md-6">
 												<div class="form-group">
 													<label for="degreeinfo">Area of Study/Degree <span style="color:red">*</span> </label>
-													<input type="text" class="form-control" id="degreeinfo" aria-describedby="degreeinfo" placeholder="" oninput="this.value = this.value.replace(/[0-9/s]/g, '');" required>
+													<input type="text" class="form-control" id="degreeinfo" pattern="[A-Za-z]{1}[A-Za-z.]{1,}" title="Enter alphabets only with a minimum length of 2 characters and dot should be after one character" aria-describedby="degreeinfo" placeholder="" oninput="this.value = this.value.replace(/[^A-Za-z.]/g, '');" required>
 												</div>
 											</div>
 											<div class="col-md-6">
@@ -456,8 +461,8 @@
 											<div class="col-md-6">
 												<div class="form-group">
 													<label for="skills">Skills</label>
-													<input type="text" class="form-control" id="skills" aria-describedby="12prHelp" placeholder="" oninput="this.value = this.value.replace(/[^A-za-z]/g, '');">
-													<small id="skill" class="form-text text-muted">Enter alphabets only</small>
+													<input type="text" class="form-control" id="skills" aria-describedby="12prHelp" placeholder="" pattern="[A-Za-z]{2,}" title="Enter alphabets only with a minimum length of 2 characters" minlength="2" oninput="this.value = this.value.replace(/[^A-za-z]/g, '');">
+													<small id="skill" class="form-text text-muted">Enter alphabets only with a minimum 2 characters</small>
 												</div>
 											</div>
 											<div class="col-md-6">
@@ -502,7 +507,6 @@
 													</div>
 												</div>
 											</div>
-											
 											<div class="col-md-6" id="showExperiencefield" style="display: none;">
 												<div class="form-group">
 													<label for="experience">Number of Years in Relevant Work Experience <span style="color:red">*</span> </label>
@@ -525,7 +529,7 @@
 											<div class="col-md-12" id="showReasonfield" style="display: none;">
 												<div class="form-group">
 													<label for="Reason">Reason for Leaving? <span style="color:red">*</span> </label>
-													<input type="text" class="form-control" id="Reason" aria-describedby="ReasonHelp" placeholder="">
+													<input type="text" class="form-control" id="Reason" aria-describedby="ReasonHelp" placeholder="" minlength="2" pattern="[A-Za-z]{2,}" title="Enter alphabets only with a minimum length of 2 characters" oninput="this.value = this.value.replace(/[^A-za-z]/g, '');">
 												</div>
 											</div>
 											
@@ -534,7 +538,7 @@
 										<li class="form-line">
 											<div class="form-header-group  header-small">
 												<div class="header-text httal htvam">
-													<h3 id="header_28" class="form-header-content" data-component="header">Reference</h3>
+													<h3 id="header_28" class="form-header-content" data-component="header" minlength="2">Reference</h3>
 													<hr />
 												</div>
 											</div>
@@ -544,8 +548,8 @@
 											<div class="col-md-6">
 												<div class="form-group">
 													<label for="Reference">Reference </label>
-													<input type="text" class="form-control" id="Reference" data-type="input-textbox" pattern="[A-Za-z]+" aria-describedby="first_nameHelp" placeholder="Name of Reference" oninput="this.value = this.value.replace(/[0-9]/g, '');">
-													<small id="Reference1" class="form-text text-muted">Enter alphabets only</small>
+													<input type="text" class="form-control" id="Reference" data-type="input-textbox" pattern="[A-Za-z]{2,}" title="Enter alphabets only with a minimum length of 2 characters" aria-describedby="first_nameHelp" placeholder="Name of Reference" oninput="this.value = this.value.replace(/[^A-za-z]/g, '');">
+													<small id="Reference1" class="form-text text-muted">Enter alphabets only with a minimum 2 characters</small>
 												</div>
 											</div>
 										</li>
