Commiting for views

--- a/CMS_APP/Views/Login/ResetPassword.cshtml
+++ b/CMS_APP/Views/Login/ResetPassword.cshtml
@@ -141,13 +141,13 @@ button[disabled] {
             <input type="hidden" id="emailid" name="emailid" value="@Model.EmailId" required>
 
             <div class="inputDiv">
-                <label class="inputLabel" for="password">New Password</label>
+                <label class="inputLabel" for="password">New Password <span style="color: red; display: inline;">*</span></label>
                 <input type="password" id="password" name="password" value="@Model.Password" required>
                 <i class="fa fa-eye-slash" id="togglePassword"></i>
             </div>
 
             <div class="inputDiv">
-                <label class="inputLabel" for="confirmPassword">Confirm Password</label>
+                <label class="inputLabel" for="confirmPassword">Confirm Password <span style="color: red; display: inline;">*</span></label>
                 <input type="password" id="confirmPassword" name="confirmPassword" value="@Model.ConfirmPassword" required>
                 <i class="fa fa-eye-slash" id="confirmtogglePassword"></i>
             </div>
